// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a forbidClick toast 1`] = `
<transition-stub
  name="mi-fade"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popup--center mi-toast mi-toast--middle mi-toast--success"
    style="z-index: 2004;"
  >
    <i class="mi-badge__wrapper mi-icon mi-icon-success mi-toast__icon">
    </i>
  </div>
</transition-stub>
`;

exports[`should render message slot correctly 1`] = `
<transition-stub
  name="mi-fade"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popup--center mi-toast mi-toast--middle mi-toast--text"
    style="z-index: 2007;"
  >
    <div class="mi-toast__text">
      Custom Message
    </div>
  </div>
</transition-stub>
`;
